package model;

public enum PassengerState {
    WAITING,
    IN_TRANSIT,
    ARRIVED
}
